--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
+	<script src="lib/ionic.cloud.min.js"></script>
 	<script src="lib/ionic.native.js"></script>
 	<script src="lib/ionic-platform-web-client/dist/ionic.io.bundle.min.js"></script> 
 	    <!--<script src="http://code.ionicframework.com/1.0.0-beta.1/js/ionic.bundle.js"></script> -->
