sitemap & report.html

--- a/appinvite.html
+++ b/appinvite.html
@@ -14,7 +14,7 @@
 <body>
 	<!-- users should not see this, as a fallback, list the store url here: -->
 	<div>
-		Android:  
+		<a href="https://play.google.com/store/apps/details?id=xyz.smartapp.p360">Android</a>
 	</div>
 	<div>
 		IOS: 
