--- a/reports.html
+++ b/reports.html
@@ -16,7 +16,7 @@
 
 	<body>
 
-		<iframe style="position: absolute; height: 100%; border: none" src="/#/app/reports/reports"></iframe>
+		<iframe style="position: absolute; width: 100%; border: none" src="/#/app/reports/reports"></iframe>
 		<!--iframe id="report" align="middle" width="400" height="800" src="/#/app/reports/reports"></iframe-->	
 
 	</body>
